--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 pre-commit = "*"
 pytest = "*"
+black = "*"
 
 [packages]
 pandas = "*"
@@ -17,3 +18,6 @@ seaborn = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
