date matching using patterns

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
     - id: black
       language_version: python3.7
+      exclude: hc_nlp/constants.py
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.7.9
     hooks:
