update pipenv to use spacy 3

--- a/Pipfile
+++ b/Pipfile
@@ -12,11 +12,12 @@ pytest-cov = "*"
 
 [packages]
 pandas = "*"
-spacy = "*"
 label-studio = "*"
 jupyterlab = "*"
 tqdm = "*"
 seaborn = "*"
+spacy-nightly = "*"
+spacy-transformers = "*"
 
 [requires]
 python_version = "3.7"
